# MiroFish

./: .env.example  CLAUDE.md  Dockerfile  RALPH_PRD.md  README.md  bitcoin-crypto-report-q1-2026.md  docker-compose.yml  energy_market_report_2026-03-24.md  energy_prediction_report.md  monitor_energy.sh  run_energy_prediction.py
backend/: gunicorn.conf.py  pyproject.toml  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  analytics.py  graph.py  helpers.py  report.py  settings.py  simulation.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/services/: __init__.py  adaptive_rounds.py  analytics.py  batch_ingester.py  bayesian_updater.py  bootstrap_confidence.py  change_notifier.py  coalition_detector.py  contradiction_detector.py  counterfactual.py  cross_validator.py  disagreement_analyzer.py  echo_chamber.py  ensemble_predictor.py  graph_builder.py  graph_entity_reader.py  graph_memory_updater.py  graph_tools.py  minority_amplifier.py  multi_wave.py  network_influence.py  oasis_profile_generator.py  ontology_generator.py  opinion_drift.py  parameter_learner.py  pattern_matcher.py  prediction_backtester.py  prediction_calibrator.py  prediction_chaining.py  prediction_decay.py  prediction_dedup.py  (+22 more)
backend/scripts/: action_logger.py  agent_memory.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  simulation_utils.py  test_profile_format.py
backend/tests/: test_api.py  test_integration.py  test_llm_client.py  test_predictions.py  test_project.py  test_retry.py  test_swarm_intelligence.py
(+81 files in other folders)
